﻿11.0.06.alpha.1 - 24th August 2024
- The world map frame can no longer be dragged completely off the screen.

11.0.04 - 14th August 2024
- Updated for game patch 11.0.2.

11.0.03 - 7th August 2024
- For 'Show unexplored areas', fixed the data for 'The Ringing Deeps' and 'Azj-Kahet'.

11.0.01 - 24th July 2024
- Welcome to The War Within!
- Added map reveal data for the Khaz Algar zones.
- Removed the 'Remove map border' option.
- Removed Dragonflight transitional code.

10.2.40 - 4th July 2024
- This is the last release that is compatible with both Dragonflight and The War Within.
- Future releases will be for The War Within only.
- Republished due to an issue with CurseForge.

10.2.34 - 15th June 2024
- The War Within Beta: For 'Show unexplored areas', the 'Tint unexplored areas' setting is now available in the world map filter menu.
- The War Within Beta: Added a new option 'Hide filter reset button'.  If enabled, the filter reset button will be hidden.  The filter reset button appears when you make changes to the map filter menu.

10.2.33 - 12th June 2024
- The War Within Beta: For 'Show unexplored areas', the 'Tint unexplored areas' setting is now available once again.

10.2.32 - 6th June 2024
- The War Within Beta: Update.

10.2.31 - 6th June 2024
- Preliminary update for The War Within Beta.

10.2.27 - 15th May 2024
- Updated deprecated functions.

10.2.26 - 8th May 2024
- Updated for game patch 10.2.7.
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

10.2.20 - 20th March 2024
- Updated for game patch 10.2.6.

10.2.18 - 6th March 2024
- For 'Show additional icons', added 'Badlands' portal icon to Valdrakken.

10.2.17 - 28th February 2024
- For 'Show additional icons', added 'Emerald Dream' portal icons to Valdrakken, Emerald Dream and Ohn'ahran Plains.

10.2.10 - 16th January 2024
- Preliminary update for game patch 10.2.5.

10.2.00 - 7th November 2023
- Preliminary update for game patch 10.2.0.